refactor a few things for auto deployment of javadocs and tooltip-sample to github gh-pages